--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Dasmoto's Arts & Crafts</title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./index.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
